# rpn

./: .copier-answers.yml  README.md  mypy.ini  pyproject.toml  roadmap.md  tasks.py  todo.md
rpn/: app.py  repository.py  stack.py
tests/: conftest.py  test_app.py  test_repository.py  test_stack.py
