[tool.isort]
profile = "black"

[tool.poetry]
name = "rpn"
version = "0.0.1"
description = "RPN calculator"
authors = ["Dimitri Merejkowsky <dimitri@dmerej.info>"]
readme = "README.md"
license = "BSD-3-Clause"
repository = ""
# documentation = ""

[tool.poetry.urls]
# Changelog = ""
# Issues = ""

[tool.poetry.dependencies]
python = "^3.6.2"

Flask = "^2.0.2"

[tool.poetry.dev-dependencies]
# Task runner
invoke = "^1.5.0"

# Tests
coverage = "^5.2"
pytest = "^6.2.1"
pytest-cov = "^2.10"
pytest-flask = "^1.2.0"

# Linters
black = "21.8b0"
flake8 = "3.9.2"
flake8-bugbear = "^21.4.3"
flake8-comprehensions = "^3.4.0"
pep8-naming = "^0.11.1"
isort = "^5.7.0"
mypy = "0.900"

# Deps scanning
safety = "^1.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
